--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,11 +15,12 @@
             app:layout_constraintTop_toTopOf="parent" android:layout_marginLeft="16dp" android:layout_marginTop="16dp"
             android:textSize="18sp" android:id="@+id/textView"/>
     <ListView
-            android:layout_width="395dp"
-            android:layout_height="675dp" android:layout_marginTop="8dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-            android:id="@+id/categoriesListView"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/categoriesListView"
+            android:divider="@null"/>
 
 </android.support.constraint.ConstraintLayout>
