--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,9 +15,10 @@
             app:layout_constraintTop_toTopOf="parent" android:layout_marginLeft="16dp" android:layout_marginTop="16dp"
             android:textSize="24sp" android:id="@+id/textView" android:textStyle="bold"
             android:textColor="@android:color/black"/>
-    <ListView
+
+    <android.support.v7.widget.RecyclerView
             android:layout_width="0dp"
-            android:layout_height="0dp" android:layout_marginTop="8dp"
+            android:layout_height="0dp" android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
